# dissertation

./: README.md
Project/: .coverage  .gitignore  README.md  install.bash  notes.md  project-stats.sh  project_paths.py  pyproject.toml  run.bash  todo.md  upgrade-sim.bash
Project/configs/: actor.yaml  aim_training.yaml  comms.yaml  critic.yaml  imitation.yaml  ippo_settings.yaml  mappo.yaml  mappo_settings.yaml  simulation.yaml  training.yaml
Project/controller/: main.py
Project/controller/marl/: buffer.py  checkpoint_manager.py  config.py  datasets.py  env_wrapper.py  imitation_learning.py  logger.py  main.py  models.py  run_sim.py  train.py  train_ae.py
Project/controller/marl/comms/: aim_comms.py  comms.py  continuous_comms.py  discrete_comms.py  learnable_discrete_comms.py  none_comms.py  reflective_comms.py
Project/controller/marl/core/: checkpoint_manager.py  config.py  datasets.py  logger.py  metric_tracker.py  visualiser.py
Project/controller/marl/models/: __init__.py  actor.py  aim.py  critic.py  quantiser.py  utils.py
Project/controller/marl/runners/: autoencoder.py  imitation_learning.py  ppo_train.py  sim_runner.py
Project/controller/marl/tests/: test_config.py
Project/environment/: Cargo.toml
Project/environment-rs/: Cargo.toml
Project/environment-rs/.cargo/: config.toml
Project/environment-rs/src/: agent.rs  config.rs  grid_map.rs  lib.rs  location.rs  resource.rs  sim.rs  station.rs  websocket.rs  world.rs
Project/environment/src/: agent.rs  config.rs  lib.rs  location.rs  sim.rs  station.rs  websocket.rs  world.rs
Project/frontend/: index.html  index.ts  load_config.py  package.json
Project/frontend/public/: frontend_config.json  simulation.yaml
Project/frontend/src/: config.ts  index.ts  sketch.ts  types.ts  websocket.ts
Project/logging_utils/: decorators.py
Project/notebooks/: loader.py
Project/notebooks/analysis/: action_semantics.ipynb  buffer.ipynb  codebook_usage.ipynb  hq_codebook_usage.ipynb  hq_target_mapping.ipynb  hq_vae_intent_mapping.ipynb  intent_mapping.ipynb  language_analysis.ipynb  loader.py  main.ipynb  plt_style.py  target_mapping.ipynb  target_probe.ipynb  temporal_analysis.ipynb  vectorised_timings.py
Project/notebooks/analysis/config/: mappo_settings.yaml  simulation.yaml
Project/notebooks/analysis/vae_offline/: codebook_usage.ipynb  hq_codebook_usage.ipynb  vae_training.ipynb
Project/notebooks/data_handling/: clear_logs.ipynb
Project/notebooks/evaluation/: vectorised_timings.py
Project/tests/core/: dummy_config.py  test_buffer.py  test_checkpoint_manager.py  test_config.py  test_datasets.py  test_logger.py  test_metric_tracker.py  test_visualiser.py
Write Up/Dissertation/: .gitignore  (+4 more)
(+28 files in other folders)
