[package]
name = "environment"
version = "0.1.0"
edition = "2024"

[lib]
name = "environment"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module", "experimental-async"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.9.2"
rayon = "1.11.0"
warp = { version = "0.4", features = ["websocket", "server"] } 
tokio = { version = "1.47.1", features = [ "macros", "rt-multi-thread", "signal" ] }
futures-util = "0.3.31"
tokio-util = "0.7.16"
serde_json = "1.0.145"
numpy = "0.28.0"